SC/15: change myfig to starfig

--- a/docs/sc/015/sc15.tex
+++ b/docs/sc/015/sc15.tex
@@ -153,7 +153,7 @@ Figure~\ref{sc15_pgplot_example}.
 \end{terminalv}
 \end{small}
 
-\myfig{sc15_pgplot}{}{height=0.3\textheight}{sc15_pgplot_example}{Output from the simple PGPLOT Fortran program.}{Output from the simple PGPLOT Fortran program.}
+\starfig{sc15_pgplot}{}{height=0.3\textheight}{sc15_pgplot_example}{Output from the simple PGPLOT Fortran program.}{Output from the simple PGPLOT Fortran program.}
 
 \subsubsection{Encapsulated Postscript and PGPLOT}
 
@@ -338,7 +338,7 @@ library extends this functionality to allow you to easily create
 interactive FORTRAN applications using graphic buttons, see
 Figure~\ref{sc15_buttons_example}.
 
-\myfig{sc15_buttons}{}{height=0.45\textheight}{sc15_buttons_example}{Example
+\starfig{sc15_buttons}{}{height=0.45\textheight}{sc15_buttons_example}{Example
 of an application using the BUTTON PGPLOT extension library.}{Example
 of an application using the BUTTON PGPLOT extension library.}
 
@@ -565,7 +565,7 @@ __DATA__
 \end{terminalv}
 \end{small}
 
-\myfig{sc15_pgperl}{}{height=0.45\textheight}{sc15_pgperl_example}{Output
+\starfig{sc15_pgperl}{}{height=0.45\textheight}{sc15_pgperl_example}{Output
 from the simple \texttt{pgperl} example script.}{Output
 from the simple \texttt{pgperl} example script.}
 
@@ -1369,7 +1369,7 @@ once it is created. Which leads to the second important point, the
 waiting for commands. The plot from this command is shown in
 Figure~\ref{sc15_qdp_plot_1}.
 
-\myfig{sc15_qdp_plot_1}{}{height=0.3\textheight}{sc15_qdp_plot_1}{The
+\starfig{sc15_qdp_plot_1}{}{height=0.3\textheight}{sc15_qdp_plot_1}{The
 default appearance when plotted using
 QDP.}{The default appearance of the \texttt{test.qdp} data file when plotted using
 QDP.}
@@ -1469,7 +1469,7 @@ plotted with these options is shown in Figure~\ref{sc15_qdp_plot_2}
 (compare with the same figure plotted with the default options, shown
 in Figure~\ref{sc15_qdp_plot_1}).
 
-\myfig{sc15_qdp_plot_2}{}{height=0.3\textheight}{sc15_qdp_plot_2}{Plotting in QDP using a Roman font.}{The
+\starfig{sc15_qdp_plot_2}{}{height=0.3\textheight}{sc15_qdp_plot_2}{Plotting in QDP using a Roman font.}{The
 appearance of the \texttt{test.qdp} data file when plotted in QDP using a
 Roman font with \texttt{csize 1.3} and \texttt{lwidth 7}.}
 
@@ -1518,7 +1518,7 @@ tells QDP that the the two lists of numbers should each have two real
 columns (one for data, one for errors). You can see what QDP makes of
 this file in Figure~\ref{sc15_qdp_plot_3}.
 
-\myfig{sc15_qdp_plot_3}{}{height=0.3\textheight}{sc15_qdp_plot_3}{Our
+\starfig{sc15_qdp_plot_3}{}{height=0.3\textheight}{sc15_qdp_plot_3}{Our
 second test data set plotted using QDP with the default options.}{Our
 second test data set plotted using QDP with the default options.}
 
@@ -1606,7 +1606,7 @@ Figure~\ref{sc15_qdp_plot_4}. Note that the fit parameters and
 variance, along with the number of data points fitted, is shown down
 the right hand side of the plot.
 
-\myfig{sc15_qdp_plot_4}{}{height=0.3\textheight}{sc15_qdp_plot_4}{Our
+\starfig{sc15_qdp_plot_4}{}{height=0.3\textheight}{sc15_qdp_plot_4}{Our
 second test data set plotted using QDP with best fit model.}{Our
 second test data set plotted using QDP with best fit model.}
 
@@ -1855,7 +1855,7 @@ Figure~\ref{sc15_gnuplot_demo_para}) and
 \htmlref{data}{sc15_gnuplot_3d}, and the ability to integrate
 functions and show the result graphically.
 
-\myfig{sc15_gnuplot_demo_para}{}{height=0.4\textheight}{sc15_gnuplot_demo_para}{A plot of a function using GNUplot}{A
+\starfig{sc15_gnuplot_demo_para}{}{height=0.4\textheight}{sc15_gnuplot_demo_para}{A plot of a function using GNUplot}{A
 plot of the function
 $(1-0.1\cos(v))\cos(u),(1-0.1\cos(v))\sin(u),0.1(\sin(v)+u/1.7-10)$, a
 parametric helix, using GNUplot}
@@ -1867,7 +1867,7 @@ different co-ordinate systems. For instance
 Figure~\ref{sc15_gnuplot_demo_0} shows a plot of the function
 $\cos(2x)$ in polar co-ordinates.
 
-\myfig{sc15_gnuplot_demo_0}{}{height=0.4\textheight}{sc15_gnuplot_demo_0}{A plot in polar co-ordinates using GNUplot.}{A
+\starfig{sc15_gnuplot_demo_0}{}{height=0.4\textheight}{sc15_gnuplot_demo_0}{A plot in polar co-ordinates using GNUplot.}{A
 plot of the function $\cos(2x)$ in polar co-ordinates using GNUplot.}
 
 \subsubsection{\xlabel{sc15_gnuplot_3d}Plotting 3D data\label{sc15_gnuplot_3d}}
@@ -1909,11 +1909,11 @@ shown in Figure~\ref{sc15_gnuplot_demo_1}. While another, very
 impressive, example from the GNUplot manual is shown in
 Figure~\ref{sc15_gnuplot_demo_2}.
 
-\myfig{sc15_gnuplot_demo_1}{}{height=0.4\textheight}{sc15_gnuplot_demo_1}{A
+\starfig{sc15_gnuplot_demo_1}{}{height=0.4\textheight}{sc15_gnuplot_demo_1}{A
 3D plot using GNUplot.}{A
 3D plot using GNUplot.}
 
-\myfig{sc15_gnuplot_demo_2}{}{height=0.4\textheight}{sc15_gnuplot_demo_2}{A
+\starfig{sc15_gnuplot_demo_2}{}{height=0.4\textheight}{sc15_gnuplot_demo_2}{A
 3D plot of a digitised blue whale using GNUplot.}{A
 3D plot of a digitised blue whale using GNUplot.}
 
@@ -1992,7 +1992,7 @@ comparison, image defect patching and the ability to connect to
 resources available in on-line catalogues and archives. An example of
 GAIA in action is shown in Figure~\ref{sc15_gaia_interface}
 
-\myfig{sc15_gaia}{}{height=0.7\textheight}{sc15_gaia_interface}{The
+\starfig{sc15_gaia}{}{height=0.7\textheight}{sc15_gaia_interface}{The
 GAIA interface.}{The GAIA interface.}
 
 A full discussion of GAIA's capabilities can be found in \xref{SUN/214}{sun214}{}.
@@ -2075,7 +2075,7 @@ application.
 % display penguin.tif
 \end{terminalv}
 
- \myfig{sc15_magick_display}{}{height=0.45\textheight}{sc15_magick_display}{The ImageMagick \texttt{display} GUI.}{The ImageMagick \texttt{display} GUI.}
+ \starfig{sc15_magick_display}{}{height=0.45\textheight}{sc15_magick_display}{The ImageMagick \texttt{display} GUI.}{The ImageMagick \texttt{display} GUI.}
 
 The \texttt{display} application is a powerful image manipulation and
 processing tool, full details of its functions can be found at
@@ -2387,7 +2387,7 @@ XV is primarily a graphics display and manipulation package, you can
 see an example of the interface in use in
 Figure~\ref{sc15_xv_interface}.
 
-\myfig{sc15_xv}{}{height=0.8\textheight}{sc15_xv_interface}{The \texttt{xv} interface.}{The
+\starfig{sc15_xv}{}{height=0.8\textheight}{sc15_xv_interface}{The \texttt{xv} interface.}{The
 \texttt{xv} interface along with the Color Editor Dialog (accessed from
 the Windows pull down menu).}
 
@@ -2406,7 +2406,7 @@ Windows'' tick-box, so that the XV windows will disappear while you
 are doing the screen grab, and hit the \textsc{Grab} button. A single
 click on your desktop will now carry out a screen grab.
 
-\myfig{sc15_xv_capture}{}{height=0.4\textheight}{sc15_xv_capture}{The \texttt{xv} interface being used to grab an image from the display.}{The \texttt{xv} interface being used to grab an image from the display.}
+\starfig{sc15_xv_capture}{}{height=0.4\textheight}{sc15_xv_capture}{The \texttt{xv} interface being used to grab an image from the display.}{The \texttt{xv} interface being used to grab an image from the display.}
 
 \subsubsection{Problems with small images}
 
@@ -2478,7 +2478,7 @@ although the paint operation in use is globally selected for all
 windows. An example of the interface in use is shown in
 Figure~\ref{sc15_xpaint_interface}.
 
-\myfig{sc15_xpaint}{}{height=0.4\textheight}{sc15_xpaint_interface}{The
+\starfig{sc15_xpaint}{}{height=0.4\textheight}{sc15_xpaint_interface}{The
 \texttt{xpaint} interface.}{The \texttt{xpaint} interface.}
 
 More information on \texttt{xpaint} can be found at \url{http://home.worldonline.dk/$\sim$torsten/xpaint/}.
@@ -2498,7 +2498,7 @@ formats such as GIF, JPEG or PostScript, imported images are treated
 as ``objects''. A simple example of what can be easily done with the
 package is shown in Figure~\ref{sc15_xfig_interface}.
 
-\myfig{sc15_xfig}{}{height=0.4\textheight}{sc15_xfig_interface}{Creating a figure using \texttt{xfig}.}{Creating
+\starfig{sc15_xfig}{}{height=0.4\textheight}{sc15_xfig_interface}{Creating a figure using \texttt{xfig}.}{Creating
 a figure showing line of sight effects on a magnetically accreting
 white dwarf using the \texttt{xfig} package.}
 
@@ -2550,7 +2550,7 @@ for batch processing tasks and image format conversion.
 Figure~\ref{sc15_gimp_interface} shows the interface during a typical
 GIMP session.
 
-\myfig{sc15_gimp}{}{height=0.8\textheight}{sc15_gimp_interface}{The
+\starfig{sc15_gimp}{}{height=0.8\textheight}{sc15_gimp_interface}{The
 GIMP interface.}{The GIMP interface.}
 
 It requires the presence of the
@@ -2847,7 +2847,7 @@ is how the GIMP refers to \htmlref{pseudo colour}{sc15_pseudo}).
 
 This is not a problem, if your image is not RGB to begin with \emph{right click} on the image to bring up the actions menu and choose \textsc{Image}$\rightarrow$\textsc{RGB}
 
-\myfig{sc15_gimp_layer_1}{}{height=0.3\textheight}{sc15_gimp_layer_1}{Tux the penguin.}{Larry
+\starfig{sc15_gimp_layer_1}{}{height=0.3\textheight}{sc15_gimp_layer_1}{Tux the penguin.}{Larry
 Ewing's image of \htmladdnormallink{Tux the
 penguin}{http://www.woodsoup.org/projs/tux_aqfh/doc/index.html}.}
 
@@ -2856,14 +2856,14 @@ again and choose \textsc{Layers}$\rightarrow$\textsc{Layers \& Channels},
 this should produce a dialog similar to
 Figure~\ref{sc15_gimp_layer_2}.
 
-\myfig{sc15_gimp_layer_2}{}{height=0.3\textheight}{sc15_gimp_layer_2}{The
+\starfig{sc15_gimp_layer_2}{}{height=0.3\textheight}{sc15_gimp_layer_2}{The
 GIMP Layers \& Channels dialog.}{The GIMP Layers \& Channels dialog.}
 
 As I've done in Figure~\ref{sc15_gimp_layer_3} we want to select a box
 on the image, we're going to put some text in the box so it needs to
 be big enough to write in.
 
-\myfig{sc15_gimp_layer_3}{}{height=0.3\textheight}{sc15_gimp_layer_3}{Making
+\starfig{sc15_gimp_layer_3}{}{height=0.3\textheight}{sc15_gimp_layer_3}{Making
 a ``floating selection'' in GIMP.}{Making a ``floating selection'' in GIMP.}
 
 We want to select this area to work with, go to the menu and choose
@@ -2871,7 +2871,7 @@ We want to select this area to work with, go to the menu and choose
 Channels dialog (Figure~\ref{sc15_gimp_layer_4}) you should see that a
 ``Floating Selection'' has appeared.
 
-\myfig{sc15_gimp_layer_4}{}{height=0.3\textheight}{sc15_gimp_layer_4}{A
+\starfig{sc15_gimp_layer_4}{}{height=0.3\textheight}{sc15_gimp_layer_4}{A
 new layer has been created for the image.}{A new layer has been created for the image.}
 
 \emph{Double click} on the Floating Selection layer in the Layers \&
@@ -2879,19 +2879,19 @@ Channels dialog, a pop-up dialog will appear allowing you to rename it
 (as in Figure~\ref{sc15_gimp_layer_5}). We're going to make this a
 text layer, so call it something appropriate like ``text Box''.
 
-\myfig{sc15_gimp_layer_5}{}{height=0.1\textheight}{sc15_gimp_layer_5}{The
+\starfig{sc15_gimp_layer_5}{}{height=0.1\textheight}{sc15_gimp_layer_5}{The
 pop-up dialog.}{The pop-up dialog.}
 
 Make sure the new layer is selection in the Layers \& Channels dialog
 (see Figure~\ref{sc15_gimp_layer_6}).
 
-\myfig{sc15_gimp_layer_6}{}{height=0.3\textheight}{sc15_gimp_layer_6}{Our
+\starfig{sc15_gimp_layer_6}{}{height=0.3\textheight}{sc15_gimp_layer_6}{Our
 renamed text layer is selected in the dialog.}{Our renamed text layer is selected in the dialog.}
 
 Back to the image and bring up the menu, select \textsc{Image}$\rightarrow$\textsc{Colors}$\rightarrow$\textsc{Levels} to bring up
 the Levels dialog (see Figure~\ref{sc15_gimp_layer_7}).
 
-\myfig{sc15_gimp_layer_7}{}{height=0.3\textheight}{sc15_gimp_layer_7}{The
+\starfig{sc15_gimp_layer_7}{}{height=0.3\textheight}{sc15_gimp_layer_7}{The
 GIMP Levels dialog.}{The GIMP Levels dialog.}
 
 We want to change the cut off level in the layer, so move the upper
@@ -2901,14 +2901,14 @@ box getting darker. If you are not sure what I'm talking about here
 compare Figure~\ref{sc15_gimp_layer_7} (before) and
 Figure~\ref{sc15_gimp_layer_8} (after).
 
-\myfig{sc15_gimp_layer_8}{}{height=0.3\textheight}{sc15_gimp_layer_8}{The
+\starfig{sc15_gimp_layer_8}{}{height=0.3\textheight}{sc15_gimp_layer_8}{The
 Levels dialog again, note the position of the bottom slider.}{The
 Levels dialog again, note the position of the bottom slider.}
 
 Hit \textsc{OK} and the you should end up with something like
 Figure~\ref{sc15_gimp_layer_9}.
 
-\myfig{sc15_gimp_layer_9}{}{height=0.3\textheight}{sc15_gimp_layer_9}{Tux
+\starfig{sc15_gimp_layer_9}{}{height=0.3\textheight}{sc15_gimp_layer_9}{Tux
 with his darkened text layer.}{Tux with his darkened text layer.}
 
 Now we want some text, bring up the menu and select \textsc{Tools}$\rightarrow$\textsc{Text}. Alternatively, you can also go to the
@@ -2923,7 +2923,7 @@ thing that looks like a addition sign, third down on the left hand
 side of the control panel, or \textsc{Tools}$\rightarrow$\textsc{Move} from
 the action menu).
 
-\myfig{sc15_gimp_layer_10}{}{height=0.3\textheight}{sc15_gimp_layer_10}{The
+\starfig{sc15_gimp_layer_10}{}{height=0.3\textheight}{sc15_gimp_layer_10}{The
 GIMP Text dialog.}{The GIMP Text dialog.}
 
 If you look at your Layers \& Channels dialog again you'll see that
@@ -2932,7 +2932,7 @@ just created another layer in our image. Rename this layer as before
 and use the text tool to add any additional text you want to the
 image, see Figure~\ref{sc15_gimp_layer_11}
 
-\myfig{sc15_gimp_layer_11}{}{height=0.3\textheight}{sc15_gimp_layer_11}{Tux with additional layers.}{Our
+\starfig{sc15_gimp_layer_11}{}{height=0.3\textheight}{sc15_gimp_layer_11}{Tux with additional layers.}{Our
 Tux image with text added as additional layers ontop of the box we
 prepared earlier.}
 
@@ -2941,7 +2941,7 @@ after adding two additional layers with the \textsc{Text Tool}, the first
 text layer is selected (which is why the words ``Tux the Penguin'' are
 surrounded with a dotted line in Figure~\ref{sc15_gimp_layer_11}.
 
-\myfig{sc15_gimp_layer_12}{}{height=0.3\textheight}{sc15_gimp_layer_12}{The
+\starfig{sc15_gimp_layer_12}{}{height=0.3\textheight}{sc15_gimp_layer_12}{The
 Layers \& Channels dialog again with the first text layer selected.}{The
 Layers \& Channels dialog again with the first text layer selected.}
 
@@ -2949,10 +2949,10 @@ Click on the ``Background'' layer in the Layers \& Channels dialog,
 and you should be left with something like the pen-ultimate figure in
 the series, Figure~\ref{sc15_gimp_layer_13}.
 
-\myfig{sc15_gimp_layer_13}{}{height=0.3\textheight}{sc15_gimp_layer_13}{The
+\starfig{sc15_gimp_layer_13}{}{height=0.3\textheight}{sc15_gimp_layer_13}{The
 final product, Tux with text.}{The final product, Tux with text.}
 
-\myfig{sc15_gimp_layer_14}{}{height=0.3\textheight}{sc15_gimp_layer_14}{The
+\starfig{sc15_gimp_layer_14}{}{height=0.3\textheight}{sc15_gimp_layer_14}{The
 GIMP File dialog.}
 
 Now select \textsc{File}$\rightarrow$\textsc{Save As} from the action menu,
@@ -2984,7 +2984,7 @@ Figure~\ref{sc15_gimp_map_1}, was generated using some modelling code
 which wrote out a greyscale image using PGPLOT. Mapping the image onto
 the sphere was done using the GIMP.
 
-\myfig{sc15_gimp_map_1}{}{height=0.4\textheight}{sc15_gimp_map_1}{Original
+\starfig{sc15_gimp_map_1}{}{height=0.4\textheight}{sc15_gimp_map_1}{Original
 star spot image generated using PGPLOT}{Original
 star spot image generated using PGPLOT}
 
@@ -2997,11 +2997,11 @@ shipped with RedHat 6.0) only allows you to map objects to a sphere
 (see Figure~\ref{sc15_gimp_map_2}) or a plane (see
 Figure~\ref{sc15_gimp_map_3}).
 
-\myfig{sc15_gimp_map_2}{}{height=0.4\textheight}{sc15_gimp_map_2}{Star spot image mapped on sphere.}{Star
+\starfig{sc15_gimp_map_2}{}{height=0.4\textheight}{sc15_gimp_map_2}{Star spot image mapped on sphere.}{Star
 spot image mapped on sphere illuminated from the upper left quadrant
 by a point source.}
 
-\myfig{sc15_gimp_map_3}{}{height=0.4\textheight}{sc15_gimp_map_3}{Star
+\starfig{sc15_gimp_map_3}{}{height=0.4\textheight}{sc15_gimp_map_3}{Star
 spot image projected on plane.}{Star spot image projected on plane.}
 
 Another interesting thing that you can do with the mapping functions
@@ -3016,18 +3016,18 @@ in Figures~\ref{sc15_gimp_map_6}, \ref{sc15_gimp_map_7},
 
 
 
-\myfig{sc15_gimp_map_4}{}{height=0.4\textheight}{sc15_gimp_map_4}{Star
+\starfig{sc15_gimp_map_4}{}{height=0.4\textheight}{sc15_gimp_map_4}{Star
 spot image with an inverse bump map and gaussian blur.}{Star
 spot image with an inverse bump map and gaussian blur.}
 
-\myfig{sc15_gimp_map_5}{}{height=0.4\textheight}{sc15_gimp_map_5}{Bump
+\starfig{sc15_gimp_map_5}{}{height=0.4\textheight}{sc15_gimp_map_5}{Bump
 mapped star spot image projected on a plane}{Bump
 mapped star spot image projected on a plane}
 
-\myfig{sc15_gimp_map_6}{}{height=0.4\textheight}{sc15_gimp_map_6}{The GIMP Map Object Dialog ``Options''}{The GIMP Map Object Dialog ``Options''}
-\myfig{sc15_gimp_map_7}{}{height=0.4\textheight}{sc15_gimp_map_7}{The GIMP Map Object Dialog ``Light''}{The GIMP Map Object Dialog ``Light''}
-\myfig{sc15_gimp_map_8}{}{height=0.4\textheight}{sc15_gimp_map_8}{The GIMP Map Object Dialog ``Material''}{The GIMP Map Object Dialog ``Material''}
-\myfig{sc15_gimp_map_9}{}{height=0.4\textheight}{sc15_gimp_map_9}{The GIMP Map Object Dialog ``Orientation''}{The GIMP Map Object Dialog ``Orientation''}
+\starfig{sc15_gimp_map_6}{}{height=0.4\textheight}{sc15_gimp_map_6}{The GIMP Map Object Dialog ``Options''}{The GIMP Map Object Dialog ``Options''}
+\starfig{sc15_gimp_map_7}{}{height=0.4\textheight}{sc15_gimp_map_7}{The GIMP Map Object Dialog ``Light''}{The GIMP Map Object Dialog ``Light''}
+\starfig{sc15_gimp_map_8}{}{height=0.4\textheight}{sc15_gimp_map_8}{The GIMP Map Object Dialog ``Material''}{The GIMP Map Object Dialog ``Material''}
+\starfig{sc15_gimp_map_9}{}{height=0.4\textheight}{sc15_gimp_map_9}{The GIMP Map Object Dialog ``Orientation''}{The GIMP Map Object Dialog ``Orientation''}
 
 Another way to present our star spot map is given by the \textsc{Script-Fu}$\rightarrow$\textsc{Animate}$\rightarrow$\textsc{Spinning Globe}
 extention. This generates multiple maps onto a sphere and could be
@@ -3043,7 +3043,7 @@ desktop, although it does now have some limited image editing
 facilities. An example of the Electric Eyes interface, which is
 typically GNOMEish, is shown in Figure~\ref{sc15_ee_example}
 
-\myfig{sc15_ee}{}{height=0.7\textheight}{sc15_ee_example}{The
+\starfig{sc15_ee}{}{height=0.7\textheight}{sc15_ee_example}{The
 Electric Eyes interface.}{The Electric Eyes interface.}
 
 If you have GNOME, for more information see \url{http://www.gnome.org/}, installed then Electric Eye will likely also
@@ -3085,7 +3085,7 @@ them in DXF format which allows you to import/export your drawing into
 other CAD systems such as AutoCAD. An example of the QCad interface is
 shown in Figure~\ref{sc15_qcad_interface}.
 
-\myfig{sc15_qcad}{}{height=0.45\textheight}{sc15_qcad_interface}{The
+\starfig{sc15_qcad}{}{height=0.45\textheight}{sc15_qcad_interface}{The
 QCad application running under KDE.}{The QCad application running under KDE.}
 
 The QCad application requires the presence of the Troll Tech
@@ -3108,7 +3108,7 @@ program, is primarly aimed at the production of publishable-quality
 electrical circuit schematic diagrams and related figures, see
 Figure~\ref{sc15_xcircuit_interface}.
 
-\myfig{sc15_xcircuit}{}{height=0.45\textheight}{sc15_xcircuit_interface}{The
+\starfig{sc15_xcircuit}{}{height=0.45\textheight}{sc15_xcircuit_interface}{The
 Xcircuit interface.}{The Xcircuit interface.}
 
 Further information on the XCircuit application can be found on
@@ -3292,7 +3292,7 @@ actually start the GV program instead). An example of GV in action can
 be seen in Figure~\ref{sc15_gv_interface}. Further information on GV
 and Ghostview can be found at \url{http://www.cs.wisc.edu/~ghost/}.
 
-\myfig{sc15_gv}{}{height=0.6\textheight}{sc15_gv_interface}{The GV interface.}{The GV interface.}
+\starfig{sc15_gv}{}{height=0.6\textheight}{sc15_gv_interface}{The GV interface.}{The GV interface.}
 
 \subsection{\xlabel{sc15_acrobat}Acrobat\label{sc15_acrobat}}
 
@@ -3853,7 +3853,7 @@ display number again:
 % vncserver -kill :1
 \end{terminalv}
 \end{small}
- \myfig{sc15_vnc}{}{height=0.45\textheight}{sc15_vnc_example1}{VNC displaying a pseudo colour desktop on a true colour display.}{VNC displaying a pseudo colour desktop on a true colour display.}
+ \starfig{sc15_vnc}{}{height=0.45\textheight}{sc15_vnc_example1}{VNC displaying a pseudo colour desktop on a true colour display.}{VNC displaying a pseudo colour desktop on a true colour display.}
 
 Figure~\ref{sc15_vnc_example1} illustrates several aspects of the VNC
 system. Here we show a Pseudocolor VNC X Windows desktop
@@ -3906,7 +3906,7 @@ machine will move with it. If you start a VNC server on every machine
 in a teaching lab then you can flick between them monitoring student
 progress, useful for remote diagnostic purposes.
 
-\myfig{sc15_vncwin}{}{height=0.45\textheight}{sc15_vnc_win}{VNC
+\starfig{sc15_vncwin}{}{height=0.45\textheight}{sc15_vnc_win}{VNC
 displaying a Windows 98 desktop on a X Windows display.}{VNC
 displaying a Windows 98 desktop on a X Windows display.}
 
@@ -3929,7 +3929,7 @@ illustrated in Figure~\ref{sc15_vmware_diagram}, while an example of
 the application in action is shown in
 Figures~\ref{sc15_vmware_example2} and \ref{sc15_vmware_example1}.
 
-\myfig{sc15_vmware_diagram}{}{height=0.3\textheight}{sc15_vmware_diagram}{VMWare Schematic}{Schematic
+\starfig{sc15_vmware_diagram}{}{height=0.3\textheight}{sc15_vmware_diagram}{VMWare Schematic}{Schematic
 showing how VMWare is used as a layer between the real and virtual machines.}
 
 This is not an emulator, you are not emulating the CPU or the hardware
@@ -3954,11 +3954,11 @@ can work with existing disk partitions on an IDE drive or can support
 new operating systems in VMware logical disks without the need to
 repartition a disk.
 
-\myfig{sc15_vmware2}{}{height=0.42\textheight}{sc15_vmware_example2}{VMWare
+\starfig{sc15_vmware2}{}{height=0.42\textheight}{sc15_vmware_example2}{VMWare
 booting the virtual machine using Linux as the ``host'' OS.}{VMWare
 booting the virtual machine using Linux as the ``host'' OS.}
 
-\myfig{sc15_vmware}{}{height=0.42\textheight}{sc15_vmware_example1}{VMWare
+\starfig{sc15_vmware}{}{height=0.42\textheight}{sc15_vmware_example1}{VMWare
 running Windows 98 as a ``guest'' OS, using Linux as the ``host'' OS.}{VMWare
 running Windows 98 as a ``guest'' OS, using Linux as the ``host'' OS.}
 
@@ -3984,7 +3984,7 @@ through booting Linux, so for most purposes the application is yet to
 reach the ``usable'' stage. More information can be found at
 \texttt{http://www.plex86.org/}.
 
-\myfig{sc15_plex86_dos}{}{height=0.42\textheight}{sc15_plex86_example}{plex86
+\starfig{sc15_plex86_dos}{}{height=0.42\textheight}{sc15_plex86_example}{plex86
 running DOS 6.22 as a ``guest'' operating system.}{plex86
 running DOS 6.22 as a ``guest'' operating system.}
 
@@ -4063,7 +4063,7 @@ be present then they can be found at the following sites:
 \begin{small}\url{ftp://www.rasterman.com/pub/enlightenment/enlightenment/}\end{small}
 \end{itemize}
 
-\myfig{sc15_gphoto}{}{height=0.45\textheight}{sc15_gphoto_screenshot}{The \texttt{gphoto} interface.}{The \texttt{gphoto} interface.}
+\starfig{sc15_gphoto}{}{height=0.45\textheight}{sc15_gphoto_screenshot}{The \texttt{gphoto} interface.}{The \texttt{gphoto} interface.}
 
 The \texttt{gphoto} package can be downloaded from \url{http://www.gphoto.org/gphoto/download.html}, and is available as source code or binary RPMs. If you want to install the package it is recommended that you download the latest stable version as a binary RPM, and ask your system administraor to install the RPM on your system. Configuration is straight forward, plug your camera into a spare serial port and select the appropriate \texttt{COM Port} and \texttt{Camera Model} from the configuration menu. To download images from your camera, go to the camera menu and select the \texttt{Get Index} option.
 
