SUN/249: replace \myfig with \starfig

--- a/docs/sun/249/sun249.tex
+++ b/docs/sun/249/sun249.tex
@@ -47,7 +47,7 @@ contains four CCD chips of 2048 $\times$ 4096 pixels
 positioned roughly, but not exactly, as shown in
 figure~\ref{fig:ideal}.
 
-\myfig{sun249_ideal}{}{}{fig:ideal}{Idealised arrangement of WFC CCDs}{Idealised arrangement of WFC CCDs}
+\starfig{sun249_ideal}{}{}{fig:ideal}{Idealised arrangement of WFC CCDs}{Idealised arrangement of WFC CCDs}
 
 In order to do accurate astrometry with data obtained
 from this instrument, it is necessary to correct for the
@@ -135,7 +135,7 @@ accuracy of 1 or 2 pixels, which is around half an arcsecond.
 Figure~\ref{fig:exag} gives an exaggerated representation of the
 shapes and positions of the CCDs as mapped on to the new coordinate system.
 
-\myfig{sun249_exag4}{}{}{fig:exag}{Exagerrated view of the
+\starfig{sun249_exag4}{}{}{fig:exag}{Exagerrated view of the
 actual arrangement of the CCDs.}{Exagerrated view of the
 actual arrangement of the CCDs.  The dots in the corners mark the
 pixel origin for each CCD and the ``$\times$'' marks the origin of
@@ -252,7 +252,7 @@ as in figure~\ref{fig:display}:
 % display r106282 style='"grid=1,gap=500"'
 \end{terminalv}
 
-\myfig{sun249_r106282-s8-display}{}{}{fig:display}{Display of a single
+\starfig{sun249_r106282-s8-display}{}{}{fig:display}{Display of a single
 CCD image with coordinates grafted onto it.}{Display
 of a single CCD image with coordinates grafted onto it using \texttt{ASTIMP}.
 Close inspection will show that the grid is not quite parallel to the
