latexsupport: change \myfig to \starfig
This macro now has a less confusing name, but it will still cause the
images not to be automatically copied into the .htx directory by
star2html. Everything using this macro could probably use a normal
\begin{figure} etc., if someone wants to change them and check the
output is still okay.

--- a/applications/latexsupport/starstyle.sty
+++ b/applications/latexsupport/starstyle.sty
@@ -85,7 +85,7 @@
 % % Graphics commands
 % %--------------------------------------
 
-\newcommand{\myfig}[6]{
+\newcommand{\starfig}[6]{
   \begin{figure}#2
     \centering\includegraphics[#3]{#1}
     \typeout{#1 inserted on page \arabic{page}}
